--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       <html lang="en">
       <h1>Hello World!!</h1>
       <p>This website will be turned into a music website </p>
-        <script src="script.js">
-        </script>
+      <script src="script.js"></script>
     </header>
   </body>
 </html>
