--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta charset="UTF-8>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <html lang="en">
-      <h1>Hello World!!</h1>
+      <h1>Music</h1>
       <p>This website will be turned into a music website </p>
       <script src="script.js"></script>
     </header>
