--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <h1>Music</h1>
       <p>This website will be turned into a music website </p>
       <script src="script.js"></script>
+        <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
     </header>
   </body>
 </html>
